Fix overflow error

--- a/website/src/index.scss
+++ b/website/src/index.scss
@@ -31,6 +31,8 @@ html, body {
     font-size: 16px;
     font-family: var(--font-primary);
     letter-spacing: 0.2ch;
+
+    overflow: hidden;
 }
 
 #root {
